# slack-export-parser

./: LICENSE  README.md  pyproject.toml
slack_export_parser/: parse_prompt_completion.py
