[tool.poetry]
name = "slack-export-parser"
version = "0.1.0"
description = ""
authors = ["Matt Mollison <matt.mollison@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "slack_export_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
tqdm = "^4.64.0"
numpy = "^1.23.0"
pyarrow = "^8.0.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
isort = "^5.10.1"
mypy = "^0.960"
# pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
